maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:14: error: ':' expected but ')' found.
def keepHandOnSideWall(sommeAngle) = {
                                 ^Escaper:38: error: identifier expected but '}' found.
}
^